--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <EditText
+        android:id="@+id/etEnterCountry"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="Введите страну"
+        android:layout_margin="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/btSend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Найти id"
+        app:layout_constraintEnd_toEndOf="@+id/etEnterCountry"
+        app:layout_constraintStart_toStartOf="@+id/etEnterCountry"
+        app:layout_constraintTop_toBottomOf="@+id/etEnterCountry" />
+
+    <TextView
+        android:id="@+id/tvIdCountry"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="ИД страны"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/btSend"
+        app:layout_constraintStart_toStartOf="@+id/btSend"
+        app:layout_constraintTop_toBottomOf="@+id/btSend" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
