--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,7 +18,7 @@
 
     <Button
         android:id="@+id/btSend"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Найти id"
         app:layout_constraintEnd_toEndOf="@+id/etEnterCountry"
@@ -32,6 +32,7 @@
         android:layout_margin="10dp"
         android:text="ИД страны"
         android:textSize="20sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/btSend"
         app:layout_constraintStart_toStartOf="@+id/btSend"
         app:layout_constraintTop_toBottomOf="@+id/btSend" />
