--- a/app/src/main/res/layout/fragment_first_screen.xml
+++ b/app/src/main/res/layout/fragment_first_screen.xml
@@ -8,14 +8,23 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/tvLetsSpeak"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Первый мануал как пользоваться"
+        android:text="Давайте поговорим"
+        android:layout_margin="50dp"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/tvLetsSpeak"
+        android:layout_margin="30dp"
+        android:textSize="20sp"
+        android:text="База данных фильмов (TMDB) - это база данных фильмов и телепрограмм, созданная сообществом. Все данные были добавлены нашим удивительным сообществом с 2008 года. Сильная международная направленность и объем данных TMDb во многом не имеют себе равных, и мы невероятно гордимся этим. Проще говоря, мы живем и дышим сообществом, и именно это нас отличает."/>
 
     <Button
         android:id="@+id/btNextFirst"
