--- a/app/src/main/res/layout/fragment_three_screen.xml
+++ b/app/src/main/res/layout/fragment_three_screen.xml
@@ -8,14 +8,33 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/tvStatistica"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Третий мануал как пользоваться"
+        android:text="Статистика"
         android:textSize="25sp"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tvMoments"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Мы все их любим. Вот несколько интересных моментов."
+        app:layout_constraintTop_toBottomOf="@+id/tvStatistica"
+        android:gravity="center"
+        android:textSize="25sp"
+        android:layout_marginTop="20dp"/>
+
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text ="681,068 Фильмов"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/tvMoments"/>
 
     <Button
         android:id="@+id/btNextThree"
