--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,35 +6,42 @@
     android:layout_height="match_parent"
     tools:context=".HomeFragment">
 
-    <EditText
-        android:id="@+id/etEnterCountry"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Введите страну"
-        android:layout_margin="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/btSend"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Найти id"
-        app:layout_constraintEnd_toEndOf="@+id/etEnterCountry"
-        app:layout_constraintStart_toStartOf="@+id/etEnterCountry"
-        app:layout_constraintTop_toBottomOf="@+id/etEnterCountry" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvIdCountry"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="ИД страны"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/btSend"
-        app:layout_constraintStart_toStartOf="@+id/btSend"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPopularityMovie"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btSend" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvTopRatedMovie"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvPopularityMovie" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvLatestMovie"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvTopRatedMovie" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
