--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -5,24 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tvTitleMovieItem"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/ivPoster"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="16dp"
-        android:text="tvTitleMovieItem"
-        android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvOverviewMovieItem"
+        android:id="@+id/tvTitleMovieItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="tvOverviewMovieItem"
+        android:layout_marginTop="28dp"
+        android:text="tvTitleMovieItem"
         android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="@+id/tvTitleMovieItem"
-        app:layout_constraintStart_toStartOf="@+id/tvTitleMovieItem"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitleMovieItem" />
+        app:layout_constraintEnd_toEndOf="@+id/ivPoster"
+        app:layout_constraintHorizontal_bias="0.387"
+        app:layout_constraintStart_toStartOf="@+id/ivPoster"
+        app:layout_constraintTop_toBottomOf="@id/ivPoster" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
