--- a/app/src/main/res/layout/fragment_first_screen.xml
+++ b/app/src/main/res/layout/fragment_first_screen.xml
@@ -14,7 +14,7 @@
         android:gravity="center"
         android:text="Давайте поговорим"
         android:layout_margin="50dp"
-        android:textSize="25sp"
+        android:textSize="45sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,9 +22,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/tvLetsSpeak"
-        android:layout_margin="30dp"
-        android:textSize="20sp"
-        android:text="База данных фильмов (TMDB) - это база данных фильмов и телепрограмм, созданная сообществом. Все данные были добавлены нашим удивительным сообществом с 2008 года. Сильная международная направленность и объем данных TMDb во многом не имеют себе равных, и мы невероятно гордимся этим. Проще говоря, мы живем и дышим сообществом, и именно это нас отличает."/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="10dp"
+        android:layout_marginTop="30dp"
+        android:textSize="22sp"
+        android:gravity="center"
+        android:text="@string/bd_tmdb"/>
 
     <Button
         android:id="@+id/btNextFirst"
