--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/homeFragment"
         android:title="Movie"
-        android:icon="@drawable/icons8_movie" />
+        android:icon="@drawable/icons8_movie"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/showFragment"
         android:title="Show"
-        android:icon="@drawable/icons8_show" />
+        android:icon="@drawable/icons8_show"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/serialFragment"
         android:title="Serial"
-
-        android:icon="@drawable/icons8_serial"/>
+        android:icon="@drawable/icons8_serial"
+        app:showAsAction="ifRoom"/>
 </menu>
