--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,18 @@
     android:background="@color/light_gray"
     tools:context=".HomeFragment">
 
+    <TextView
+        android:id="@+id/tvPopularity"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Populaity"
+        android:textSize="30sp"
+        android:layout_margin="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPopularityMovie"
@@ -16,7 +28,29 @@
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/tvPopularity" />
+
+    <TextView
+        android:id="@+id/tvTopRated"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="TopRated"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvPopularityMovie" />
+
+    <TextView
+        android:id="@+id/tvLatest"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="Latest"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvTopRatedMovie" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTopRatedMovie"
@@ -26,7 +60,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvPopularityMovie" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTopRated" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvLatestMovie"
@@ -36,7 +70,7 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvTopRatedMovie" />
+        app:layout_constraintTop_toBottomOf="@+id/tvLatest" />
 
 
 
