--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="165dp">
 
         <ImageView
             android:id="@+id/ivPoster"
@@ -21,11 +21,12 @@
 
         <TextView
             android:id="@+id/tvTitleMovieItem"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="tvTitleMovieItem"
             android:textSize="10sp"
+            android:gravity="center"
             app:layout_constraintEnd_toEndOf="@id/ivPoster"
             app:layout_constraintStart_toStartOf="@+id/ivPoster"
             app:layout_constraintTop_toBottomOf="@id/ivPoster"
