--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,39 +4,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray"
     tools:context=".HomeFragment">
 
     <TextView
         android:id="@+id/tvPopularity"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Populaity"
+        android:gravity="left"
+        android:padding="5dp"
         android:textSize="22sp"
-        android:layout_margin="10dp"
+        android:layout_margin="15dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+
         />
 
+
+    <TextView
+        android:id="@+id/tvAlso"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:text="Еще..."
+        android:padding="5dp"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvPopularity"
+        app:layout_constraintBottom_toTopOf="@+id/rvPopularityMovie"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvPopularity"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPopularityMovie"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
+        android:layout_margin="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvPopularity" />
 
     <TextView
-        android:id="@+id/tvTopRated"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="TopRated"
+        android:layout_marginEnd="15dp"
+        android:text="Еще..."
+        android:padding="5dp"
         android:textSize="22sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvTopRated"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvTopRated" />
+
+    <TextView
+        android:id="@+id/tvTopRated"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:text="TopRated"
+        android:gravity="left"
+        android:textSize="22sp"
+        android:padding="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rvPopularityMovie" />
 
@@ -44,18 +72,20 @@
         android:id="@+id/tvLatest"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="15dp"
         android:text="Latest"
+        android:gravity="left"
+        android:padding="5dp"
         android:textSize="22sp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rvTopRatedMovie" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvTopRatedMovie"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
+        android:layout_margin="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTopRated" />
@@ -63,8 +93,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvLatestMovie"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         android:orientation="vertical"
+        android:layout_margin="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvLatest" />
