--- a/app/src/main/res/layout/fragment_three_screen.xml
+++ b/app/src/main/res/layout/fragment_three_screen.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:gravity="center"
-        android:text="Мы все их любим. Вот несколько интересных моментов."
+        android:text="Мы все ее любим. Вот несколько интересных моментов."
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,76 +35,72 @@
 
     <TextView
         android:id="@+id/tvCountMusic"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="44dp"
+        android:drawableLeft="@drawable/icons8_1"
         android:gravity="center"
         android:text=" 681 068 \n Фильмов"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/btNextThree"
-        app:layout_constraintEnd_toStartOf="@+id/tvCountSerial"
-        app:layout_constraintHorizontal_bias="0.2"
+        android:textSize="30sp"
+        android:layout_margin="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvMoments"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/tvMoments" />
 
     <TextView
         android:id="@+id/tvCountSerial"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="64dp"
+        android:layout_marginTop="25dp"
+        android:drawableLeft="@drawable/icons8_23"
         android:gravity="center"
         android:text="2 751 866\nТелесериалы"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/btNextThree"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvCountMusic"
-        app:layout_constraintVertical_bias="0.037" />
+        app:layout_constraintEnd_toEndOf="@+id/tvCountMusic"
+        app:layout_constraintStart_toStartOf="@+id/tvCountMusic"
+        app:layout_constraintTop_toBottomOf="@+id/tvCountMusic" />
 
     <TextView
         android:id="@+id/tvCountShow"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:drawableLeft="@drawable/icons8_3"
         android:gravity="center"
         android:text="115 877 \nТВ шоу"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/btNextThree"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.273"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCountSerial"
-        app:layout_constraintVertical_bias="0.142" />
+        app:layout_constraintEnd_toEndOf="@+id/tvCountSerial"
+        app:layout_constraintStart_toStartOf="@+id/tvCountSerial"
+        app:layout_constraintTop_toBottomOf="@+id/tvCountSerial" />
 
     <TextView
         android:id="@+id/tvCountReafct"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="189dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="15dp"
+        android:drawableLeft="@drawable/icons8_5"
         android:gravity="center"
         android:text="419 254 \n Изменения за неделю"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/btNextThree"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.961"
+        app:layout_constraintEnd_toEndOf="@+id/tCountImage"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/tvCountShow"
-        app:layout_constraintTop_toBottomOf="@+id/tvCountSerial"
-        app:layout_constraintVertical_bias="0.427" />
+        app:layout_constraintTop_toBottomOf="@+id/tCountImage" />
 
     <TextView
         android:id="@+id/tCountImage"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:drawableLeft="@drawable/icons8_4"
         android:gravity="center"
         android:text="2 854 259 \n Изображений"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/btNextThree"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.323"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCountShow"
-        app:layout_constraintVertical_bias="0.612" />
+        app:layout_constraintEnd_toEndOf="@+id/tvCountShow"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/tvCountShow"
+        app:layout_constraintTop_toBottomOf="@+id/tvCountShow" />
 
     <Button
         android:id="@+id/btNextThree"
