--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeFragment">
+    tools:context=".MovieFragment">
 
     <TextView
         android:id="@+id/tvPopularity"
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:text="Populaity"
         android:gravity="left"
+        android:textColor="@color/black"
         android:padding="5dp"
         android:textSize="22sp"
         android:layout_margin="15dp"
@@ -62,6 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:text="TopRated"
+        android:textColor="@color/black"
         android:gravity="left"
         android:textSize="22sp"
         android:padding="5dp"
@@ -75,6 +77,7 @@
         android:layout_margin="15dp"
         android:text="Latest"
         android:gravity="left"
+        android:textColor="@color/black"
         android:padding="5dp"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
